bitbybit-portfolio/frontend/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitbybit-frontend-service
  labels:
    app: bitbybit-frontend
spec:
  selector:
    app: bitbybit-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
